# bsa

./: .gitignore  Cargo.toml  cargo-timing-20211128T215925Z.html  cargo-timing-20211128T220011Z.html  performance.md
backup/gen0/: lib.rs  read.rs  read2.rs
backup/gen0/read/fo4/: mod.rs
backup/gen0/read/tes3/: bsa_ref.rs
backup/gen0/tes3/: archive.rs  bsa.rs  writer.rs
backup/gen0/tes4/: bsa.rs
crates/bsa/: Cargo.toml
crates/bsa-core/: Cargo.toml
crates/bsa-core/src/: error.rs  helpers.rs  lib.rs  path.rs  read.rs  str.rs  string.rs
crates/bsa/src/: lib.rs  read.rs
crates/bytes/src/: lib.rs
crates/dds/: Cargo.toml
crates/dds/src/: compression.rs  defs.rs  lib.rs
crates/dds/src/compression/: generic.rs
crates/dds/src/compression/generic/: bc1.rs
crates/fo4-ba2/: Cargo.toml
crates/fo4-ba2/src/: chunk_data.rs  common.rs  lib.rs  main.rs  raw.rs  read.rs
crates/fo4-ba2/src/read/: entry.rs
crates/tes4-bsa/: Cargo.toml
crates/tes4-bsa/src/: archive.rs  bsa.rs  bytes.rs  common.rs  hash.rs  lib.rs  main.rs  raw_archive.rs  read_at.rs  tests.rs
crates/windows-1252/: Cargo.toml
crates/windows-1252/src/: lib.rs
src/: common.rs  lib.rs  main.rs  write.rs  writer.rs
src/common/: bytes.rs
src/read/fo4/: ba2.rs
src/read/tes3/: bsa.rs  mod.rs
src/tes3/: mod.rs  tests.rs
src/tes4/: archive.rs  mod.rs  tests.rs  writer.rs
versions/v0/: lib.rs  main.rs  read.rs  read2.rs  write.rs
versions/v0/raw/: mod.rs  tes3.rs  tes4.rs  win1252.rs
versions/v0/read/: tes3.rs  tes4.rs
versions/v0/write/: tes3.rs
