[package]
name = "bsa"
version = "0.1.0"
edition = "2018"

[dependencies]
anyhow = { version = "1.0.45", features = ["backtrace"] }
bitflags = "1.3.2"
bytemuck = { version = "1.7.2", features = ["derive", "extern_crate_std"] }
color-eyre = "0.5.11"
crc32fast = "1.2.1"
crossbeam = "0.8.1"
flate2 = { version = "1.0.22", features = [
    "zlib-ng-compat",
], default-features = false }
lz4_flex = "0.9.0"
memchr = "2.4.1"
memmap2 = "0.5.0"
num_cpus = "1.13.0"
once_cell = "1.8.0"
rayon = "1.5.1"
tempfile = "3.2.0"
thiserror = "1.0.30"
threadpool = "1.8.1"
walkdir = "2.3.2"

[profile.release]
debug-assertions = true
