[package]
name = "tes4-bsa"
version = "0.1.0"
edition = "2021"
description = "https://drive.google.com/file/d/1XwNmGICRusMH_ksSMJr-YJGyM4eoZoHW/view?usp=sharing"
[dependencies]
bitflags = "1.3"
bytes = { path = "../bytes" }
bsa-core = { path = "../bsa-core" }
windows-1252 = { path = "../windows-1252" }
threadpool = "1.8"
num_cpus = "1.13"
flate2 = "1.0"
lz4_flex = "0.9"
rayon = "1.5"
